--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
     <header class="header">
@@ -227,7 +227,7 @@
                 <p class="text-footer">Подпишитесь на рассылку</p>
                 <form>
                     <input class="join-input" name="email" type="email" placeholder="E-mail" required>
-                    <button class="hero-button join-button">
+                    <button class="join-button">
                         <svg class="icon-send">
                             <use href="./images/sprite.svg#send-modal">
                             </use>
