--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
         integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
         crossorigin="anonymous"/>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
@@ -347,7 +347,7 @@
         <p class="text-footer">Подпишитесь на рассылку</p>
         <form>
           <input class="join-input" name="email" type="email" placeholder="E-mail" required>
-          <button class="hero-button join-button">
+          <button class="join-button">
           <svg class="icon-send">
             <use href="./images/sprite.svg#send-modal">
             </use>
